--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = timepipe
-version = 0.0.1
+version = 0.1.0
 author = fancy
 author_email = ruomengfan@outlook.com
-description = A small example package
+description = A multi-events timestamp visualizer
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/VegaDeg/Timing
+url = https://github.com/VegaDeg/Timepipe
 project_urls =
-    Bug Tracker = https://github.com/VegaDeg/Timing
+    Bug Tracker = https://github.com/VegaDeg/Timepipe
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
